Fix icon alignment, make i18n checkboxes 18x18

--- a/src/app/pages/i18n/i18n.component.scss
+++ b/src/app/pages/i18n/i18n.component.scss
@@ -80,3 +80,12 @@ mat-nav-list {
 ::ng-deep .mat-select-panel {
     max-height: none !important;
 }
+
+::ng-deep .mat-checkbox-inner-container {
+    width: 18px;
+    height: 18px;
+}
+
+::ng-deep .pxb-info-list-item-icon-wrapper {
+    margin-left: -8px !important;
+}
