--- a/src/app/pages/list/multiselect-list/multiselect-list.component.scss
+++ b/src/app/pages/list/multiselect-list/multiselect-list.component.scss
@@ -52,3 +52,7 @@ footer.active {
     width: 18px;
     height: 18px;
 }
+
+::ng-deep .pxb-info-list-item-icon-wrapper {
+    margin-left: -8px !important;
+}
