--- a/src/app/pages/list/sortable-list/sortable-list.component.scss
+++ b/src/app/pages/list/sortable-list/sortable-list.component.scss
@@ -21,3 +21,7 @@ mat-list {
 .cdk-drop-list.cdk-drop-list-dragging pxb-info-list-item:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+::ng-deep .pxb-info-list-item-icon-wrapper {
+    margin-left: -8px !important;
+}
